<?xml version="1.0" encoding="utf-8"?>

<!-- scrollview is removable -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="ch.epfl.sweng.fiktion.views.POIPageActivity">

        <ImageView
            android:id="@+id/mainImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/main_image_content_description"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/loadingSpinner"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:indeterminate="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/mainImage" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/upvoteButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainImage"
            tools:ignore="HardcodedText" /> <!-- dynamically updated -->

        <TextView
            android:id="@+id/cityCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:paddingEnd="20dp"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/upvotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/featured"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/colorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityCountry"
            tools:ignore="HardcodedText,RtlSymmetry" /> <!-- dynamically updated -->

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/featured"
            tools:ignore="HardcodedText,RtlSymmetry" /> <!-- dynamically updated -->

        <Button
            android:id="@+id/upvoteButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/thumb_up_icon_20"
            android:drawableTint="@android:color/white"
            android:onClick="vote"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/vote"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/moreMenu"
            app:layout_constraintTop_toBottomOf="@+id/mainImage"
            tools:targetApi="m" />

        <ImageButton
            android:id="@+id/moreMenu"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/actions"
            android:elevation="3dp"
            android:onClick="showMoreMenu"
            android:src="@drawable/more_vertical_icon_24"
            android:tint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainImage" />

        <ch.epfl.sweng.fiktion.views.utils.ScrollableMapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <ImageButton
            android:id="@+id/center_map_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/center_map"
            android:elevation="3dp"
            android:src="@drawable/center_icon_24"
            android:tint="@color/white"
            app:layout_constraintEnd_toEndOf="@id/map"
            app:layout_constraintTop_toTopOf="@+id/map" />

        <TextView
            android:id="@+id/photoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/pictures"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map" />

        <Button
            android:id="@+id/addPictureButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/camera_icon_20"
            android:drawableTint="@android:color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/add_a_picture"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map"
            tools:targetApi="m" />

        <HorizontalScrollView
            android:id="@+id/imgSlider"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:scrollbarFadeDuration="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoTitle">

            <LinearLayout
                android:id="@+id/imageLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/reviewsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/user_reviews"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgSlider" />

        <Button
            android:id="@+id/addReviewButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/rate_review_icon_20"
            android:drawableTint="@android:color/white"
            android:onClick="startWriteCommentActivity"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/add_a_review"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgSlider"
            tools:targetApi="m" />

        <LinearLayout
            android:id="@+id/reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="10dp"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviewsTitle" />

        <TextView
            android:id="@+id/nearbyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/nearby"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviews" />

        <LinearLayout
            android:id="@+id/nearbyPoisList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nearbyTitle"
            tools:ignore="UselessLeaf" /> <!-- dynamically updated -->

        <TextView
            android:id="@+id/noNearbyPois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            android:text="@string/no_nearby_places_found"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nearbyPoisList" />

        <ProgressBar
            android:id="@+id/uploadProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:progress="0"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/imgSlider"
            app:layout_constraintEnd_toStartOf="@+id/addPictureButton"
            app:layout_constraintStart_toEndOf="@+id/photoTitle"
            app:layout_constraintTop_toBottomOf="@+id/map" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
